--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     const lozPhoto = "hero.webp";
 
     function OneLevelUpSite() {
-      const [openFaq, setOpenFaq] = useState(false);
+      const [openFaq, setOpenFaq] = useState(true);
       const [menuOpen, setMenuOpen] = useState(false);
 
       const scrollToSection = (id) => {
@@ -416,12 +416,12 @@
                 <span className="bg-gradient-to-r from-[#f472b6] to-[#ec4899] bg-clip-text text-transparent">We've Got Answers</span>
               </h3>
               <div className="bg-[#1F253D] border border-white/5 rounded-2xl overflow-hidden mb-6">
-                <button onClick={() => setOpenFaq(!openFaq)} className="w-full px-8 py-6 flex items-center justify-between text-left hover:bg-white/5 transition-colors">
-                  <span className="text-xl font-semibold">{openFaq ? 'Hide FAQs' : 'Show FAQs'}</span>
+                <div className="w-full px-8 py-6 flex items-center justify-between text-left">
+                  <span className="text-xl font-semibold">Show FAQs</span>
                   <svg className={`w-6 h-6 transition-transform ${openFaq ? 'rotate-180' : ''}`} fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M19 9l-7 7-7-7" />
                   </svg>
-                </button>
+               </div>
               </div>
               {openFaq && (
                 <div className="space-y-6">
