--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     const lozPhoto = "hero.webp";
 
     function OneLevelUpSite() {
-      const [openFaq, setOpenFaq] = useState(true);
+      const openFaq = true;
       const [menuOpen, setMenuOpen] = useState(false);
 
       const scrollToSection = (id) => {
