--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </section>
 
           {/* PROCESS */}
-          <section id="process" className="relative py-16 px-6 bg-[#2a3548] overflow-hidden">
+          <section id="process" className="hidden md:block relative py-16 px-6">
             <div className="absolute top-0 right-0 w-64 h-80 bg-gradient-to-bl from-pink-400/20 via-purple-400/10 to-transparent rounded-full blur-3xl pointer-events-none"></div>
             <div className="max-w-6xl mx-auto relative z-10">
               <div className="text-center mb-8">
@@ -340,7 +340,7 @@
           </section>
 
           {/* WHO WE ARE */}
-          <section id="who-we-are" className="relative py-16 px-6 overflow-hidden">
+          <section id="who" className="hidden md:block relative py-16 px-6">
             <div className="absolute top-8 left-0 w-60 h-96 bg-gradient-to-r from-pink-400/20 via-purple-400/10 to-transparent rounded-full blur-3xl pointer-events-none"></div>
             <div className="max-w-6xl mx-auto relative z-10">
               <div className="text-center mb-8">
@@ -418,7 +418,7 @@
           </section>
 
           {/* FAQ */}
-          <section id="faq" className="relative py-16 px-6 overflow-hidden">
+          <section id="faq" className="hidden md:block relative py-16 px-6 overflow-hidden">
             <div className="absolute top-0 left-0 w-72 h-60 bg-gradient-to-br from-purple-400/20 via-pink-400/10 to-transparent rounded-full blur-3xl pointer-events-none"></div>
             <div className="max-w-4xl mx-auto relative z-10">
               <div className="text-center mb-8">
