--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           </section>
 
           {/* OUTCOMES */}
-          <section id="outcomes" className="relative py-16 px-6 overflow-hidden">
+         <section id="outcomes" className="hidden md:block relative py-16 px-6 overflow-hidden">
             <div className="absolute bottom-0 left-0 w-80 h-56 bg-gradient-to-tr from-pink-400/20 via-pink-500/10 to-transparent rounded-full blur-3xl pointer-events-none"></div>
             <div className="max-w-6xl mx-auto relative z-10">
               <div className="text-center mb-8">
@@ -384,7 +384,7 @@
           </section>
 
           {/* WHY WORK WITH US */}
-          <section id="why-work-with-us" className="relative py-16 px-6 bg-[#2a3548] overflow-hidden">
+          <section id="why" className="hidden md:block relative py-16 px-6 bg-[#2a3548] overflow-hidden">
             <div className="absolute bottom-0 right-0 w-[420px] h-52 bg-gradient-to-tl from-pink-400/20 via-purple-500/10 to-transparent rounded-full blur-3xl pointer-events-none"></div>
             <div className="max-w-6xl mx-auto relative z-10">
               <div className="text-center mb-8">
@@ -454,7 +454,7 @@
           </section>
 
           {/* FOOTER */}
-          <footer className="border-t border-white/5 py-6 px-6 bg-[#1F253D]">
+          <footer className="hidden md:block border-t border-white/5 py-6 px-6 bg-[#1F253D]">
             <div className="max-w-7xl mx-auto">
               <div className="flex items-center justify-between">
                 {/* Logo - same width as header logo column */}
