Update email link in index.html

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 {/* Social links - same width as header CTA column */}
                 <div className="flex-shrink-0 w-48 flex items-center justify-end space-x-6">
                   <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" className="text-white/40 hover:text-[#f472b6] transition-colors text-sm">LinkedIn</a>
-                  <a href="mailto:contact@onelevelup.com" className="text-white/40 hover:text-[#f472b6] transition-colors text-sm">Email</a>
+                  <a href="mailto:info@onelevelup.com" className="text-white/40 hover:text-[#f472b6] transition-colors text-sm">Email</a>
                 </div>
               </div>
               <div className="text-center text-white/40 text-sm mt-6">© 2026 One Level Up. All rights reserved.</div>
