--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
               {/* Desktop CTA */}
               <div className="hidden lg:flex flex-shrink-0 w-48 justify-end">
-                <a href="mailto:contact@onelevelup.com" className="bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-5 py-2.5 rounded-full text-white font-semibold text-xs hover:shadow-lg hover:shadow-pink-500/30 transition-all whitespace-nowrap">
+                <a href="mailto:info@onelevelup.com.au" className="bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-5 py-2.5 rounded-full text-white font-semibold text-xs hover:shadow-lg hover:shadow-pink-500/30 transition-all whitespace-nowrap">
                   Book Your Free Consultation
                 </a>
               </div>
@@ -89,7 +89,7 @@
                     </button>
                   ))}
                 </nav>
-                <a href="mailto:contact@onelevelup.com" className="block bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-5 py-3 rounded-full text-white font-semibold text-sm text-center">
+                <a href="mailto:info@onelevelup.com.au" className="block bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-5 py-3 rounded-full text-white font-semibold text-sm text-center">
                   Book Your Free Consultation
                 </a>
               </div>
@@ -106,7 +106,7 @@
               <p className="text-lg md:text-2xl text-white/60 mb-10 max-w-4xl mx-auto leading-relaxed">
                 We help advertisers and agencies move from reactive execution to meaningful leadership → re-engineering digital media teams for efficiency, effectiveness, and long-term growth.
               </p>
-              <a href="mailto:contact@onelevelup.com" className="inline-flex items-center bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-10 py-5 rounded-full text-white font-semibold text-xl hover:shadow-lg hover:shadow-pink-500/30 transition-all">
+              <a href="mailto:info@onelevelup.com.au" className="inline-flex items-center bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-10 py-5 rounded-full text-white font-semibold text-xl hover:shadow-lg hover:shadow-pink-500/30 transition-all">
                 Book Your Free Consultation
               </a>
             </div>
@@ -334,7 +334,7 @@
                   <span>No obligations, no pressure</span>
                 </div>
               </div>
-              <a href="mailto:contact@onelevelup.com" className="inline-flex items-center bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-12 py-6 rounded-full text-white font-semibold text-xl hover:shadow-lg hover:shadow-pink-500/30 transition-all mb-6">Book Your Free Consultation</a>
+              <a href="mailto:info@onelevelup.com.au" className="inline-flex items-center bg-gradient-to-r from-[#8b5cf6] to-[#ec4899] px-12 py-6 rounded-full text-white font-semibold text-xl hover:shadow-lg hover:shadow-pink-500/30 transition-all mb-6">Book Your Free Consultation</a>
               <div className="text-lg text-white flex items-center justify-center">🔥 Only 3 spots left this month</div>
             </div>
           </section>
@@ -477,7 +477,7 @@
                 {/* Social links - same width as header CTA column */}
                 <div className="flex-shrink-0 w-48 flex items-center justify-end space-x-6">
                   <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" className="text-white/40 hover:text-[#f472b6] transition-colors text-sm">LinkedIn</a>
-                  <a href="mailto:info@onelevelup.com" className="text-white/40 hover:text-[#f472b6] transition-colors text-sm">Email</a>
+                  <a href="mailto:info@onelevelup.com.au" className="text-white/40 hover:text-[#f472b6] transition-colors text-sm">Email</a>
                 </div>
               </div>
               <div className="text-center text-white/40 text-sm mt-6">© 2026 One Level Up. All rights reserved.</div>
